# data-subscriber

./: .flake8  .gitignore  BUILD.md  CHANGELOG.md  Downloader.md  LICENSE  README.md  Subscriber.md  conftest.py  podaac_data_subscriber.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  test.py
.github/workflows/: python-app.yml  release.yml
cmr/: umm-t.json
subscriber/: __main__.py  podaac_access.py  podaac_data_downloader.py  podaac_data_subscriber.py  subsetting.py  test_daac_download.py  test_daac_download_orig.py  token_formatter.py
tests/: .harmony-example-json  MANUAL.md  releases.json  test_access.py  test_downloader_regression.py  test_subscriber.py  test_subscriber_extracting_checksums.py  test_subscriber_matching_checksums.py  test_subscriber_regression.py  test_subsetter_regression.py  test_token_regression.py
