[tool.poetry]
name = "podaac-data-subscriber"
version = "1.15.0-alpha.3"
description = "PO.DAAC Data Subscriber Command Line Tool"
authors = ["PO.DAAC <podaac@podaac.jpl.nasa.gov>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/podaac/data-subscriber"
exclude = ['cmr', 'img', 'tests']
packages = [
    { include = "subscriber" },
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.27.1"
tenacity = "^8.0.1"
packaging = "^23.0"
harmony-py = "^0.4.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
flake8 = "^4.0.1"
pytest-mock = "^3.8.2"

[tool.poetry.scripts]
podaac-data-subscriber = 'subscriber.podaac_data_subscriber:main'
podaac-data-downloader = 'subscriber.podaac_data_downloader:main'

[tool.pytest.ini_options]
markers = [
    "regression: marks a test as a regression, requires netrc file (deselect with '-m \"not regresion\"')",
    "token: marks a test as a token regression, requires netrc file and relies on enterprise URS (deselect with '-m \"not token\"')"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
